--- a/Daily_Updates/formatter.html
+++ b/Daily_Updates/formatter.html
@@ -8,7 +8,6 @@
 </head>
 <body class="bg-gray-100 min-h-screen flex items-center justify-center">
   <div class="container max-w-lg bg-white rounded-lg shadow-lg p-8">
-    <h2 class="text-2xl font-bold mb-4 text-center">Emoji Formatter</h2>
     <textarea 
       id="inputText" 
       placeholder="Paste your text here..." 
@@ -30,6 +29,8 @@
     ></textarea>
   </div>
 
+  <div id="copyNotification" class="fixed top-4 right-4 bg-green-500 text-white font-semibold py-2 px-4 rounded shadow-lg hidden">Copied to clipboard!</div>
+
   <script>
     function formatText() {
       const inputText = document.getElementById("inputText").value;
@@ -39,7 +40,22 @@
         .replace(/:arrows_counterclockwise:/g, "🔄") 
         .replace(/:x:/g, "❌"); 
 
-      document.getElementById("outputText").value = formattedText;
+      const cleanText = formattedText.replace(/^Daily Check-In - .*\n/gm, "").trim();
+
+      document.getElementById("outputText").value = cleanText;
+
+      const outputTextArea = document.getElementById("outputText");
+      outputTextArea.select();
+      document.execCommand("copy");
+      
+      showNotification("Copied to clipboard!");
+    }
+
+    function showNotification(message = "Copied to clipboard!") {
+      const notification = document.getElementById("copyNotification");
+      notification.textContent = message;
+      notification.classList.remove("hidden");
+      setTimeout(() => notification.classList.add("hidden"), 2000);
     }
   </script>
 </body>
