--- a/beta/voice.html
+++ b/beta/voice.html
@@ -11,7 +11,6 @@
   <div class="container mx-auto max-w-lg bg-white rounded-lg shadow-lg p-8">
     <h2 id="checkInTitle" class="text-2xl font-bold mb-4 text-center">Daily Check-In</h2>
     <form id="checkinForm" class="space-y-4">
-      <!-- Task Section -->
       <div class="task-review-container">
         <div class="task-container">
           <label class="task-title">Task 1</label>
@@ -38,7 +37,6 @@
         </div>
       </div>
 
-      <!-- Additional Sections (Dynamic Fields, Day Score, Habits, Gratitude) -->
       <div>
         <label class="block font-semibold mb-2">Gratitude</label>
         <div class="flex items-center">
@@ -54,7 +52,6 @@
   </div>
   
   <script>
-    // Set the title to include today's date
     function setDayInTitle() {
       const options = { weekday: "long", year: "numeric", month: "long", day: "numeric" };
       const today = new Date();
@@ -62,7 +59,6 @@
     }
     setDayInTitle();
 
-    // Voice Recognition for Input Fields
     function startRecognition(fieldId) {
       if (!('webkitSpeechRecognition' in window)) {
         alert('Your browser does not support voice recognition. Please use a modern browser like Chrome.');
@@ -70,9 +66,9 @@
       }
 
       const recognition = new webkitSpeechRecognition();
-      recognition.lang = 'en-US'; // Set the language
-      recognition.interimResults = false; // Final results only
-      recognition.maxAlternatives = 1; // Single result
+      recognition.lang = 'en-US';
+      recognition.interimResults = false; 
+      recognition.maxAlternatives = 1; 
 
       recognition.onresult = function (event) {
         const transcript = event.results[0][0].transcript;
@@ -92,7 +88,6 @@
       recognition.start();
     }
 
-    // Save to Cookies
     function saveToCookies() {
       const fields = document.querySelectorAll("#checkinForm input, #checkinForm textarea");
       fields.forEach(field => {
@@ -105,7 +100,6 @@
       });
     }
 
-    // Load from Cookies
     function loadFromCookies() {
       const cookies = document.cookie.split("; ").reduce((acc, cookie) => {
         const [name, value] = cookie.split("=");
@@ -124,7 +118,6 @@
 
     loadFromCookies();
 
-    // Generate Slack Markdown
     function generateSlackMarkdown() {
       const gratitude = document.getElementById("gratitude").value.trim().split("\n").map(item => `• ${item}`).join("\n");
       const markdown = `*Daily Check-In*\n\n*Gratitude:*\n${gratitude || "No gratitude items added."}`;
