--- a/Daily_Updates/daily.html
+++ b/Daily_Updates/daily.html
@@ -7,7 +7,60 @@
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <script src="./assets/main.js"></script>
 <script src="./assets/settings.js"></script>
+<script src="./assets/slider-save.js"></script>
 <link href="./assets/settings.css" rel="stylesheet">
+
+<style>
+  .task-review-container {
+    margin-bottom: 1.5rem;
+  }
+  
+  .task-container {
+    margin-bottom: 1.5rem;
+  }
+  
+  .task-title {
+    font-weight: 600;
+    margin-bottom: 0.5rem;
+    display: block;
+  }
+  
+  .task-input {
+    width: 100%;
+    padding: 0.5rem;
+    border: 1px solid #ddd;
+    border-radius: 0.25rem;
+    margin-bottom: 0.5rem;
+  }
+  
+  .checkbox-container {
+    display: flex;
+    gap: 1rem;
+    margin-bottom: 0.5rem;
+  }
+  
+  .checkbox-label {
+    display: flex;
+    align-items: center;
+  }
+  
+  .checkbox-text {
+    margin-left: 0.5rem;
+  }
+  
+  .reason-textarea {
+    width: 100%;
+    padding: 0.5rem;
+    border: 1px solid #ddd;
+    border-radius: 0.25rem;
+    margin-top: 0.5rem;
+    transition: all 0.3s ease;
+  }
+  
+  .hidden {
+    display: none;
+  }
+  </style>
 </head>
 
 <button id="gearButton" class="absolute top-4 right-4 text-gray-500 hover:text-gray-700 focus:outline-none transition transform hover:scale-105">
@@ -204,18 +257,18 @@
 
       <div>
         <input 
-        type="range" 
-        id="dayScore" 
-        min="1" 
-        max="10" 
-        step="0.5" 
-        value="5" 
-        class="w-full" 
-        oninput="updateDayScore(); saveToCookies()"
-      />
-      <p class="text-center mt-2" id="dayScoreValue">5</p>    
+          type="range" 
+          id="dayScore" 
+          min="1" 
+          max="10" 
+          step="0.5" 
+          value="5" 
+          class="w-full" 
+          oninput="updateSliderText(this.value); saveSliderToLocalStorage()"
+        />
+        <p class="text-center mt-2" id="dayScoreValue">Move the slider</p>
       </div>
-      
+  
 
       <div>
         <label class="block font-semibold mb-2">Habit Tracker</label>
@@ -267,57 +320,6 @@
   </footer>
   
 </body>
-<style>
-  .task-review-container {
-    margin-bottom: 1.5rem;
-  }
-  
-  .task-container {
-    margin-bottom: 1.5rem;
-  }
-  
-  .task-title {
-    font-weight: 600;
-    margin-bottom: 0.5rem;
-    display: block;
-  }
-  
-  .task-input {
-    width: 100%;
-    padding: 0.5rem;
-    border: 1px solid #ddd;
-    border-radius: 0.25rem;
-    margin-bottom: 0.5rem;
-  }
-  
-  .checkbox-container {
-    display: flex;
-    gap: 1rem;
-    margin-bottom: 0.5rem;
-  }
-  
-  .checkbox-label {
-    display: flex;
-    align-items: center;
-  }
-  
-  .checkbox-text {
-    margin-left: 0.5rem;
-  }
-  
-  .reason-textarea {
-    width: 100%;
-    padding: 0.5rem;
-    border: 1px solid #ddd;
-    border-radius: 0.25rem;
-    margin-top: 0.5rem;
-    transition: all 0.3s ease;
-  }
-  
-  .hidden {
-    display: none;
-  }
-  </style>
 <script>
 function setDayInTitle() {
   const options = { weekday: "long", year: "numeric", month: "long", day: "numeric" };
